# idevice_mirror

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
_DataURI/: data.5b5201e762c88.txt  data.5ce2eabc73871.txt  data.8bc03d1d57f95.txt  data.cf700030a5784.txt
connect.facebook.net/en_US/: sdk-598929afa69c6.js  sdk.js
css/: flexisel.css  menu.css  modal.custom.css  responsiveslider.css  style.css
css/font-awesome/css/: font-awesome.min.css
css/rs-plugin/css/: settings.css
js/: custom.js  jquery.flexisel.js  plugins.js  scrolltotop.js  wow.min.js
js/rs-plugin/js/: jquery.themepunch.revolution.min.js  jquery.themepunch.tools.min.js
site information on Berchlist company limited/: site details.txt
src/: main.rs
